{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 220,
  "lineage": "8b9e9d6a-bcbc-4d72-ada1-fb294a481ceb",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "segat-alb-logs-production-662252246273",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-external/8149ebdab289b6ee",
            "arn_suffix": "app/segat-alb-external/8149ebdab289b6ee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "segat-alb-external-1704477576.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-external/8149ebdab289b6ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "segat-alb-external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d0a9caf64b60bf7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008106df4f1f1af71"
              },
              {
                "subnet_id": "subnet-0acc85e5f12937e2b"
              }
            ],
            "subnets": [
              "subnet-008106df4f1f1af71",
              "subnet-0acc85e5f12937e2b"
            ],
            "tags": {
              "Name": "segat-alb-external"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-alb-external",
              "Project": "SEGAT"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "segat-alb-logs-production-662252246273",
                "enabled": true,
                "prefix": "alb-internal"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-internal/53b8064469ccabd1",
            "arn_suffix": "app/segat-alb-internal/53b8064469ccabd1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-segat-alb-internal-1418411880.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-internal/53b8064469ccabd1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "segat-alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03cf69d006f5c552f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d218ba91475ea48"
              },
              {
                "subnet_id": "subnet-0fb783e59f99f9e85"
              }
            ],
            "subnets": [
              "subnet-06d218ba91475ea48",
              "subnet-0fb783e59f99f9e85"
            ],
            "tags": {
              "Name": "segat-alb-internal"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-alb-internal",
              "Project": "SEGAT"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-external/8149ebdab289b6ee/8d8636433fbf8cd1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-external/8149ebdab289b6ee/8d8636433fbf8cd1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-external/8149ebdab289b6ee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "SEGAT"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.external",
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-external/8149ebdab289b6ee/f0ff96137bc34563",
            "certificate_arn": "arn:aws:acm:us-east-1:662252246273:certificate/2c1663ac-f457-4293-bfa9-fe0ec890bc6d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-ecs/d4a7d72d954120d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-external/8149ebdab289b6ee/f0ff96137bc34563",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-external/8149ebdab289b6ee",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "SEGAT"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.certificates.aws_acm_certificate.main",
            "module.certificates.tls_private_key.main",
            "module.certificates.tls_self_signed_cert.main",
            "module.compute.aws_lb.external",
            "module.compute.aws_lb_target_group.ecs",
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-internal/53b8064469ccabd1/05f10d3081a6a3da",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-internal/53b8064469ccabd1/05f10d3081a6a3da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-internal/53b8064469ccabd1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "SEGAT"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.internal",
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-internal/53b8064469ccabd1/9571344b5aed1c4a",
            "certificate_arn": "arn:aws:acm:us-east-1:662252246273:certificate/2c1663ac-f457-4293-bfa9-fe0ec890bc6d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-internal/38c2bf1ebdc0010a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/app/segat-alb-internal/53b8064469ccabd1/9571344b5aed1c4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/app/segat-alb-internal/53b8064469ccabd1",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "SEGAT"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.certificates.aws_acm_certificate.main",
            "module.certificates.tls_private_key.main",
            "module.certificates.tls_self_signed_cert.main",
            "module.compute.aws_lb.internal",
            "module.compute.aws_lb_target_group.internal",
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.aws_s3_bucket_ownership_controls.alb_logs",
            "module.compute.aws_s3_bucket_policy.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.compute.data.aws_elb_service_account.main",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-ecs/d4a7d72d954120d4",
            "arn_suffix": "targetgroup/segat-tg-ecs/d4a7d72d954120d4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-ecs/d4a7d72d954120d4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "segat-tg-ecs",
            "port": 8080,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "segat-tg-ecs"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-tg-ecs",
              "Project": "SEGAT"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-internal/38c2bf1ebdc0010a",
            "arn_suffix": "targetgroup/segat-tg-internal/38c2bf1ebdc0010a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-internal/38c2bf1ebdc0010a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "segat-tg-internal",
            "port": 8080,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "segat-tg-internal"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-tg-internal",
              "Project": "SEGAT"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:vpc-endpoint/vpce-0ab3aca1d10bc950d",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ab3aca1d10bc950d",
            "ip_address_type": "ipv4",
            "owner_id": "662252246273",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09fb2b459507d1b8f"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "segat-vpc-endpoint-dynamodb"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-vpc-endpoint-dynamodb",
              "Project": "SEGAT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:vpc-endpoint/vpce-0263c16f8330ed9fe",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0263c16f8330ed9fe",
            "ip_address_type": "ipv4",
            "owner_id": "662252246273",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09fb2b459507d1b8f"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "segat-vpc-endpoint-s3"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-vpc-endpoint-s3",
              "Project": "SEGAT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-0f40665499f077fcd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f40665499f077fcd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-default-sg-bloqueado"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-default-sg-bloqueado",
              "Project": "SEGAT"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a7ee7a24f82afc3",
            "arn": "arn:aws:ec2:us-east-1:662252246273:elastic-ip/eipalloc-01a7ee7a24f82afc3",
            "association_id": "eipassoc-05dca762526122393",
            "domain": "vpc",
            "id": "eipalloc-01a7ee7a24f82afc3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c67713dab2803ff7",
            "private_dns": "ip-10-0-10-21.ec2.internal",
            "private_ip": "10.0.10.21",
            "public_dns": "ec2-34-202-209-210.compute-1.amazonaws.com",
            "public_ip": "34.202.209.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "segat-eip-nat"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-eip-nat",
              "Project": "SEGAT"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:internet-gateway/igw-0fd88bf0f7db621e3",
            "id": "igw-0fd88bf0f7db621e3",
            "owner_id": "662252246273",
            "tags": {
              "Name": "segat-igw"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-igw",
              "Project": "SEGAT"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a7ee7a24f82afc3",
            "association_id": "eipassoc-05dca762526122393",
            "connectivity_type": "public",
            "id": "nat-0851f7b8e4e87c862",
            "network_interface_id": "eni-0c67713dab2803ff7",
            "private_ip": "10.0.10.21",
            "public_ip": "34.202.209.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0acc85e5f12937e2b",
            "tags": {
              "Name": "segat-nat-gw"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-nat-gw",
              "Project": "SEGAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:route-table/rtb-09fb2b459507d1b8f",
            "id": "rtb-09fb2b459507d1b8f",
            "owner_id": "662252246273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0851f7b8e4e87c862",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "segat-rt-private"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-rt-private",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:route-table/rtb-0ce4be2fe6d42f3da",
            "id": "rtb-0ce4be2fe6d42f3da",
            "owner_id": "662252246273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd88bf0f7db621e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "segat-rt-public"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-rt-public",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae0ac0ee66b051f",
            "route_table_id": "rtb-09fb2b459507d1b8f",
            "subnet_id": "subnet-0fb783e59f99f9e85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab396b57c0a0f1b0",
            "route_table_id": "rtb-09fb2b459507d1b8f",
            "subnet_id": "subnet-06d218ba91475ea48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b296b957fe36ac",
            "route_table_id": "rtb-09fb2b459507d1b8f",
            "subnet_id": "subnet-0c8d47fdcd0b87a71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_c",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c006e3af5875f0",
            "route_table_id": "rtb-09fb2b459507d1b8f",
            "subnet_id": "subnet-039f5d253d6362abb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_c2",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05288b74e376acc69",
            "route_table_id": "rtb-0ce4be2fe6d42f3da",
            "subnet_id": "subnet-0acc85e5f12937e2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cbfa1dee226b6ff",
            "route_table_id": "rtb-0ce4be2fe6d42f3da",
            "subnet_id": "subnet-008106df4f1f1af71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-00d0a9caf64b60bf7",
            "description": "Trafico HTTP y HTTPS hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida hacia los Fargate Tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-00d0a9caf64b60bf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "segat-sg-alb",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-sg-alb"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-sg-alb",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-03cf69d006f5c552f",
            "description": "Trafico hacia Fargate solo desde el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida a internet via NAT Gateway",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-03cf69d006f5c552f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Puerto 8080 solo desde el ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d0a9caf64b60bf7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "segat-sg-ecs-tasks",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-sg-ecs-tasks"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-sg-ecs-tasks",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-0fe72520fcd48a2dc",
            "description": "PostgreSQL accesible solo desde los contenedores Fargate",
            "egress": [],
            "id": "sg-0fe72520fcd48a2dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL solo desde ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf69d006f5c552f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "segat-sg-rds",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-sg-rds"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-sg-rds",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-0e8968573b25c4bfb",
            "description": "Redis accesible solo desde los contenedores Fargate",
            "egress": [],
            "id": "sg-0e8968573b25c4bfb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis solo desde ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf69d006f5c552f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "segat-sg-redis",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-sg-redis"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-sg-redis",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-0fb783e59f99f9e85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb783e59f99f9e85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "AZ-A",
              "Name": "segat-subnet-private-a",
              "Tier": "Private-Compute"
            },
            "tags_all": {
              "AZ": "AZ-A",
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-private-a",
              "Project": "SEGAT",
              "Tier": "Private-Compute"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-06d218ba91475ea48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d218ba91475ea48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "AZ-B",
              "Name": "segat-subnet-private-b",
              "Tier": "Private-Compute"
            },
            "tags_all": {
              "AZ": "AZ-B",
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-private-b",
              "Project": "SEGAT",
              "Tier": "Private-Compute"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-0c8d47fdcd0b87a71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8d47fdcd0b87a71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "AZ-A",
              "Name": "segat-subnet-private-c",
              "Tier": "Private-Data"
            },
            "tags_all": {
              "AZ": "AZ-A",
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-private-c",
              "Project": "SEGAT",
              "Tier": "Private-Data"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-039f5d253d6362abb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f5d253d6362abb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "AZ-B",
              "Name": "segat-subnet-private-c2",
              "Tier": "Private-Data"
            },
            "tags_all": {
              "AZ": "AZ-B",
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-private-c2",
              "Project": "SEGAT",
              "Tier": "Private-Data"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-0acc85e5f12937e2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acc85e5f12937e2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "segat-subnet-public-a",
              "Tier": "Public"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-public-a",
              "Project": "SEGAT",
              "Tier": "Public"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:subnet/subnet-008106df4f1f1af71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008106df4f1f1af71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662252246273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "segat-subnet-public-b",
              "Tier": "Public"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-subnet-public-b",
              "Project": "SEGAT",
              "Tier": "Public"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:vpc/vpc-063e4fc1b0a245bf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0075213af440c3c12",
            "default_route_table_id": "rtb-0871141ab75caa679",
            "default_security_group_id": "sg-0f40665499f077fcd",
            "dhcp_options_id": "dopt-06c569064dd4d9b0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063e4fc1b0a245bf4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0871141ab75caa679",
            "owner_id": "662252246273",
            "tags": {
              "Name": "segat-vpc"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-vpc",
              "Project": "SEGAT"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_link",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "segat-alb-logs-production-662252246273",
                "enabled": true,
                "prefix": "alb-internal-nlb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/net/segat-nlb-internal/f459968b47dd3842",
            "arn_suffix": "net/segat-nlb-internal/f459968b47dd3842",
            "dns_name": "segat-nlb-internal-f459968b47dd3842.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/net/segat-nlb-internal/f459968b47dd3842",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "segat-nlb-internal",
            "security_groups": [
              "sg-0adfaad0ba9fc3213"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d218ba91475ea48"
              },
              {
                "subnet_id": "subnet-0fb783e59f99f9e85"
              }
            ],
            "subnets": [
              "subnet-06d218ba91475ea48",
              "subnet-0fb783e59f99f9e85"
            ],
            "tags": {
              "Name": "segat-nlb-internal"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-nlb-internal",
              "Project": "SEGAT"
            },
            "vpc_id": "vpc-063e4fc1b0a245bf4",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.vpc_link.aws_security_group.internal_nlb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_link",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/net/segat-nlb-internal/f459968b47dd3842/6462fd538fdd83a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-nlb-to-alb/8ffbfe418e8d4b9f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:listener/net/segat-nlb-internal/f459968b47dd3842/6462fd538fdd83a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:loadbalancer/net/segat-nlb-internal/f459968b47dd3842",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "SEGAT"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.vpc_link.aws_lb.internal_nlb",
            "module.vpc_link.aws_lb_target_group.internal_nlb",
            "module.vpc_link.aws_security_group.internal_nlb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_link",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-nlb-to-alb/8ffbfe418e8d4b9f",
            "arn_suffix": "targetgroup/segat-tg-nlb-to-alb/8ffbfe418e8d4b9f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:662252246273:targetgroup/segat-tg-nlb-to-alb/8ffbfe418e8d4b9f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "segat-tg-nlb-to-alb",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "segat-tg-nlb-to-alb"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-tg-nlb-to-alb",
              "Project": "SEGAT"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_link",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:662252246273:security-group/sg-0adfaad0ba9fc3213",
            "description": "Trafico hacia el NLB que conecta API Gateway (VPC Link) con el ALB interno",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Salida hacia el ALB interno",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0adfaad0ba9fc3213",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS desde la VPC (ENIs administradas por API Gateway VPC Link)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "segat-sg-internal-nlb",
            "name_prefix": "",
            "owner_id": "662252246273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "segat-sg-internal-nlb"
            },
            "tags_all": {
              "Course": "Infraestructura-como-Codigo-UPAO",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "segat-sg-internal-nlb",
              "Project": "SEGAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e4fc1b0a245bf4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_link",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_alb_from_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPS desde el NLB del VPC Link (API Gateway)",
            "from_port": 443,
            "id": "sgrule-1189812775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cf69d006f5c552f",
            "security_group_rule_id": "sgr-0a149c0bd77b73deb",
            "self": false,
            "source_security_group_id": "sg-0adfaad0ba9fc3213",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_tasks",
            "module.networking.aws_vpc.main",
            "module.vpc_link.aws_security_group.internal_nlb"
          ]
        }
      ]
    }
  ]
}